--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
     "mavon-editor": "^2.9.0",
+    "qs": "^6.10.1",
+    "tailwindcss": "^2.0.2",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
