--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "element-ui": "^2.13.2",
     "mavon-editor": "^2.9.0",
     "qs": "^6.10.1",
-    "tailwindcss": "^2.0.2",
     "vue": "^2.6.11",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.7",
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-e2e-cypress": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
@@ -31,13 +31,16 @@
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^7.0.36",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
     "vue-template-compiler": "^2.6.11"
   }
 }
