--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 /*  文件中的内容主要是对开发环境和生产环境的请求接口路径做修改  */
 		NODE_ENV = 'development'
-		VUE_APP_API_URL = 'https://localhost:5001/'
+	#	VUE_APP_API_URL = 'https://localhost:5001/'
+    VUE_APP_API_URL = 'http://localhost:8087/'
